[gd_scene load_steps=3 format=2]

[ext_resource path="res://attacks/SwordsmanAttack.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 68 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 72, 0 )
shape = SubResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
